# UMAMI

./: .gitignore  README.md  main.py  pyproject.toml
doc/: api_specification.md  database_structure.md  ui_ux_specification.md
src/backend/: api_functions.py  fastapi_builder.py
src/database/: database_schema.json  db_build.py  db_test.py
src/docker/: .dockerignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  init-db.sh  manage-db.sh  nginx.conf
src/frontend/: api_client.py  umami_app.py
