[project]
name = "umami"
version = "1.0.0"
description = "Sistema Gestionale ASD - API REST per la gestione di Associazioni Sportive Dilettantistiche"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
]
